fixed spacing

--- a/react-app/src/components/CreateReview/CreateReview.css
+++ b/react-app/src/components/CreateReview/CreateReview.css
@@ -7,5 +7,5 @@
 .review-text{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    
 }
