--- a/react-app/src/components/CreateVenue/CreateVenue.css
+++ b/react-app/src/components/CreateVenue/CreateVenue.css
@@ -26,5 +26,5 @@
 .inputs{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
 }
